// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a primary image 1`] = `
.c8 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c9.hidden {
  visibility: hidden;
}

.c10 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c11 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c3 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c7 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c6 {
  background-color: #FFFFFF;
  height: 60px;
}

.c6 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c6.tc-sticky {
  will-change: height,box-shadow;
}

.c6[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c6[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c5 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c5 + .c4 {
  margin-top: -1px !important;
}

.c5:last-child {
  margin-bottom: 30px;
}

.c5.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c0 {
  box-sizing: content-box;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c8 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c8 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c9 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c9 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c11 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c11:first-of-type {
    margin-right: 1.5%;
  }

  .c11:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c5 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c5 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c5 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<style>
.IS1 {
  margin-bottom: 0;
}

.IS2 {
  display: none;
}
</style>

<div>
  <div />
  <article>
    <Head />
    <div
      className="c0 responsiveweb-sc-1exejum-0 c0 css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1 responsiveweb__MainContainer-sc-1exejum-1 c1 css-view-1dbjc4n"
    >
      <div
        className="c2 responsiveweb__HeaderContainer-sc-1exejum-2 c2 css-view-1dbjc4n"
      >
        <div
          className="c3 c4 c5"
        >
          <div
            className="IS2"
          />
          <div>
            <div
              className="c6"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c7 responsiveweb__BodyContainer-sc-1exejum-3 c7 css-view-1dbjc4n"
      >
        <div>
          <div
            className="c8 responsiveweb__PrimaryImg-sc-16nqyj8-5 c8 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div
          className="group-3 hidden c9"
        >
          <h2
            className="c10"
          >
            Sponsored
          </h2>
          <div
            className="c11"
          />
          <div
            className="c11"
          />
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`2. a fullwidth image 1`] = `
.c8 {
  padding-bottom: 20px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c9.hidden {
  visibility: hidden;
}

.c10 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c11 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c3 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c7 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c6 {
  background-color: #FFFFFF;
  height: 60px;
}

.c6 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c6.tc-sticky {
  will-change: height,box-shadow;
}

.c6[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c6[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c5 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c5 + .c4 {
  margin-top: -1px !important;
}

.c5:last-child {
  margin-bottom: 30px;
}

.c5.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c0 {
  box-sizing: content-box;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c9 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c9 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c11 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c11:first-of-type {
    margin-right: 1.5%;
  }

  .c11:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c5 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c5 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c5 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<style>
.IS1 {
  margin-bottom: 0;
}

.IS2 {
  display: none;
}
</style>

<div>
  <div />
  <article>
    <Head />
    <div
      className="c0 responsiveweb-sc-1exejum-0 c0 css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1 responsiveweb__MainContainer-sc-1exejum-1 c1 css-view-1dbjc4n"
    >
      <div
        className="c2 responsiveweb__HeaderContainer-sc-1exejum-2 c2 css-view-1dbjc4n"
      >
        <div
          className="c3 c4 c5"
        >
          <div
            className="IS2"
          />
          <div>
            <div
              className="c6"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c7 responsiveweb__BodyContainer-sc-1exejum-3 c7 css-view-1dbjc4n"
      >
        <div>
          <div
            className="c8 responsiveweb__FullWidthImg-sc-16nqyj8-6 c8 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div
          className="group-3 hidden c9"
        >
          <h2
            className="c10"
          >
            Sponsored
          </h2>
          <div
            className="c11"
          />
          <div
            className="c11"
          />
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`3. a secondary image 1`] = `
.c8 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c9.hidden {
  visibility: hidden;
}

.c10 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c11 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c3 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c7 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c6 {
  background-color: #FFFFFF;
  height: 60px;
}

.c6 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c6.tc-sticky {
  will-change: height,box-shadow;
}

.c6[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c6[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c5 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c5 + .c4 {
  margin-top: -1px !important;
}

.c5:last-child {
  margin-bottom: 30px;
}

.c5.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c0 {
  box-sizing: content-box;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c8 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c8 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c9 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c9 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c11 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c11:first-of-type {
    margin-right: 1.5%;
  }

  .c11:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c5 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c5 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c5 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<style>
.IS1 {
  margin-bottom: 0;
}

.IS2 {
  display: none;
}
</style>

<div>
  <div />
  <article>
    <Head />
    <div
      className="c0 responsiveweb-sc-1exejum-0 c0 css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1 responsiveweb__MainContainer-sc-1exejum-1 c1 css-view-1dbjc4n"
    >
      <div
        className="c2 responsiveweb__HeaderContainer-sc-1exejum-2 c2 css-view-1dbjc4n"
      >
        <div
          className="c3 c4 c5"
        >
          <div
            className="IS2"
          />
          <div>
            <div
              className="c6"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c7 responsiveweb__BodyContainer-sc-1exejum-3 c7 css-view-1dbjc4n"
      >
        <div>
          <div
            className="c8 responsiveweb__SecondaryImg-sc-16nqyj8-7 c8 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div
          className="group-3 hidden c9"
        >
          <h2
            className="c10"
          >
            Sponsored
          </h2>
          <div
            className="c11"
          />
          <div
            className="c11"
          />
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`4. an inline image 1`] = `
.c8 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c9.hidden {
  visibility: hidden;
}

.c10 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c11 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c3 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c7 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c6 {
  background-color: #FFFFFF;
  height: 60px;
}

.c6 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c6.tc-sticky {
  will-change: height,box-shadow;
}

.c6[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c6[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c5 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c5 + .c4 {
  margin-top: -1px !important;
}

.c5:last-child {
  margin-bottom: 30px;
}

.c5.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c0 {
  box-sizing: content-box;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c8 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c8 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c9 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c9 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c11 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c11:first-of-type {
    margin-right: 1.5%;
  }

  .c11:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c5 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c5 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c5 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<style>
.IS1 {
  margin-bottom: 0;
}

.IS2 {
  display: none;
}
</style>

<div>
  <div />
  <article>
    <Head />
    <div
      className="c0 responsiveweb-sc-1exejum-0 c0 css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1 responsiveweb__MainContainer-sc-1exejum-1 c1 css-view-1dbjc4n"
    >
      <div
        className="c2 responsiveweb__HeaderContainer-sc-1exejum-2 c2 css-view-1dbjc4n"
      >
        <div
          className="c3 c4 c5"
        >
          <div
            className="IS2"
          />
          <div>
            <div
              className="c6"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c7 responsiveweb__BodyContainer-sc-1exejum-3 c7 css-view-1dbjc4n"
      >
        <div>
          <div
            className="c8 responsiveweb__InlineImg-sc-16nqyj8-8 c8 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div
          className="group-3 hidden c9"
        >
          <h2
            className="c10"
          >
            Sponsored
          </h2>
          <div
            className="c11"
          />
          <div
            className="c11"
          />
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;
